--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- <video src="https://www.youtube.com/embed/1K3z62yoiOA"></video> -->
     </main>
 
-    <script type="module" src="/script/script.js"></script>
+    <script type="module" src="./script/script.js"></script>
     <!-- <script src="/script/coptions.js"></script> -->
 </body>
 
