--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture">
         </iframe> -->
 
-        <!-- <video>
+        <video>
             <source src="./video/theBear.mp4" type="video/mp4">
           Your browser does not support the video tag.
-        </video> -->
+        </video>
 
         <!-- <video src="https://www.youtube.com/embed/1K3z62yoiOA"></video> -->
     </main>
