--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             </div>
         </section>
 
-        <button></button>
+        <!-- <button></button> -->
 
         <!-- <iframe src="https://www.youtube.com/embed/1K3z62yoiOA?autoplay=0&showinfo=0&controls=0&cc_load_policy=0"
             frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture">
         </iframe> -->
 
-        <video>
+        <video controls>
             <source src="./video/theBear.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
