--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@
             </div>
         </section>
 
-        <!-- <button></button> -->
 
         <!-- <iframe src="https://www.youtube.com/embed/1K3z62yoiOA?autoplay=0&showinfo=0&controls=0&cc_load_policy=0"
             frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture">
         </iframe> -->
 
-        <video controls>
+        <!-- <video>
             <source src="./video/theBear.mp4" type="video/mp4">
           Your browser does not support the video tag.
-        </video>
+        </video> -->
+
+        <video id="myVideo">
+            <source src="./video/theBear.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+
+          <button></button>
 
         <!-- <video src="https://www.youtube.com/embed/1K3z62yoiOA"></video> -->
     </main>
