--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <section>
             <h1>Marie</h1>
 
-            <div>
-                <p>
-                    Close caption
-                </p>
-            </div>
+            <ul>
+                <!-- <p>
+                    Close captionknkjn
+                </p> -->
+            </ul>
         </section>
 
 
@@ -31,7 +31,7 @@
           Your browser does not support the video tag.
         </video> -->
 
-        <video id="myVideo">
+        <video>
             <source src="./video/theBear.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
